# whisper.cpp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/assistant/: CMakeLists.txt  assistant.cpp
